# isai_kernel

./: .gitignore  BILU_cusparse.h  CMakeLists.txt  Makefile  analyze_pair.h  bcsc2bcsr.h  bcsc2bcsrAndSpMV.h  bsr2csr.h  bsr_tensor_SpMV.h  bsrilu.h  bsrilu_debug.h  cacheY_isai.h  cape_sptrsv.h  common.h  config.h  csr2bsr.h  csr_cusp_sptrsv.h  isai_bsr.h  main.cu  read_matrix.h  residual_check.h  spmv_debug.h
build_cu117/: tri_solve_tensor  tri_solve_tensor_cache  tri_solve_tensor_double_cache
build_old/: CMakeCache.txt  Makefile  cmake_install.cmake  gpu0.txt  gpu1.txt  gpu2.txt  run.sh  tri_solve_cache  tri_solve_cache_tensor  tri_solve_nocache  tri_solve_tensor  tri_solve_tensorcore_nocache
build_test/: CMakeCache.txt  Makefile  cmake_install.cmake  run.sh  tri_solve_tensor
exe_app/: tri_solve  tri_solve_Ycached
